[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'


[project]
name = 'hydrachain-explorer-wrapper'
version = '0.1.0'
authors = [
    {name = 'Georgi Peev'}
]
description = 'A simple Python library for wrapping the requests from the hydrachain-explorer-requester'
readme = 'README.md'
requires-python = '>=3.11'
keywords = ['hydrachain', 'hydra', 'hydrachain-explorer-requester']
classifiers = [
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
]
dependencies = [
    'requests >= 2.28.1, < 3',
    'hydrachain-explorer-requester >= 0.1.1, < 1',
    'marshmallow >= 3.19.0, < 4'
]
[project.urls]
'Source' = 'https://github.com/ItsGosho/hydrachain-explorer-wrapper'